# GLM-Worker

./: .gitignore  CHANGELOG.md  README.md  install.ps1  install.sh  pyproject.toml
agents/: glm.md
docs/: CHANGELOG.md
docs/superpowers/specs/: 2026-07-03-glm-subagent-routing-design.md  2026-07-03-glm-worker-mcp-design.md
skills/glm-worker/: SKILL.md
src/glm_worker_mcp/: agent_loop.py  config.py  safety.py  server.py  tools.py
tests/: conftest.py  test_agent_loop.py  test_config.py  test_live_smoke.py  test_mode.py  test_safety.py  test_server.py  test_tools.py
